# mlops_se489

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  PHASE1.md  PHASE2.md  PHASE3.md  README.md  cloudbuild-api.yaml  cloudbuild.yaml  config_cpu.yaml  docker-compose.yaml  pipeline.sh  pyproject.toml  requirements-api.txt  requirements.txt
.github/workflows/: ci.yml  cml.yml  code-quality.yml  deploy_hf_space.yml  docker-publish.yaml  tests.yml
api/: main.py
configs/: config.yaml
configs/data/: default.yaml
configs/model/: gradient_boosting.yaml  random_forest.yaml
data/: README.md
data/processed/: cml_sample_features.parquet
dockerfiles/: Dockerfile  Dockerfile.api  README.md
docs/: api.md  getting_started.md  index.md  mkdocs.yml
hf_space/: README.md  app.py
models/: champion_model.pkl
notebooks/: 00_setup.py  01_bronze_ingestion_product_demand.py  02_silver_cleaning_product_demand.py  03_gold_weekly_aggregation_product_demand.py  04_gold_feature_engineering_product_demand.py  05_model_training_product_demand.py  06_batch_prediction_product_demand.py  README.md
reports/: cml_report.md  mlflow_metrics.csv
reports/profiling/: training_cpu_profile.txt  training_memory_usage.txt
scripts/: cml_train.py  profile_training.py
src/mlops_se489/: __init__.py  logging_config.py  predict_model.py  train_model.py
src/mlops_se489/api/: main.py
src/mlops_se489/data/: __init__.py  loaders.py  (+1 more)
streamlit_app/: app.py  requirements.txt
tests/: test_integration_pipeline.py  test_model.py  test_pipeline.py
(+14 files in other folders)
